frontend/test/should_fail/iterated_query_nested_access_non_self.grg
test foo()
{	
	iterated it {
		.;
	---
		def var bar:double = 1;
	}
	
	independent {
		.;
	---
		def var score:double = yield([?it].extract<bar>().sum()); // no acces from nested part allowed
	}
}
